--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -529,7 +529,7 @@ files:
   $modules/net_tools/dnsmadeeasy.py:
     maintainers: briceburg
   $modules/net_tools/haproxy.py:
-    maintainers: ravibhure
+    maintainers: ravibhure Normo
   $modules/net_tools/hetzner_failover_ip.py:
     maintainers: felixfontein
   $modules/net_tools/hetzner_failover_ip_info.py:
