[stable-1] fix CI (#2892)
* Make sure ruamel.yaml.clib 0.2.2 is used for Python 2.7.

* Also add to unit tests requirements.

* Don't install on Python 2.6.

* Another constraints file.

--- a/tests/unit/requirements.txt
+++ b/tests/unit/requirements.txt
@@ -17,6 +17,7 @@ httmock
 
 # requirement for kubevirt modules
 openshift ; python_version >= '2.7'
+ruamel.yaml.clib <= 0.2.2 ; python_version == '2.7' # 0.2.4 require python 3.5 or later, 0.2.3 is yanked
 
 # requirement for maven_artifact module
 lxml
