--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -1,7 +1,7 @@
 automerge: true
 files:
   plugins/:
-    supershipit: quidame Ajpantuso
+    supershipit: quidame
   changelogs/fragments/:
     support: community
   $actions:
