[stable-4] Move in-plugin docs to sidecar for filters not named like the filename that contain them (#4626) (#4631)
* Move in-plugin docs to sidecar for filters not named like the filename that contain them.

* Update BOTMETA.

(cherry picked from commit d1877e1915e444569eaaa92368d0877af319e0d6)

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -126,6 +126,8 @@ files:
     maintainers: Ajpantuso
   $filters/groupby.py:
     maintainers: felixfontein
+  $filters/groupby_as_dict.yml:
+    maintainers: felixfontein
   $filters/hashids.py:
     maintainers: Ajpantuso
   $filters/hashids_decode.yml:
@@ -136,6 +138,8 @@ files:
     maintainers: kellyjonbrazil
   $filters/json_query.py: {}
   $filters/list.py:
+    maintainers: vbotka
+  $filters/lists_mergeby.yml:
     maintainers: vbotka
   $filters/path_join_shim.py:
     maintainers: felixfontein
