These libraries have conflicting dependencies way too often. (#4829)

--- a/tests/unit/requirements.txt
+++ b/tests/unit/requirements.txt
@@ -28,11 +28,11 @@ datadog-api-client >= 1.0.0b3 ; python_version >= '3.6'
 dnsimple >= 2 ; python_version >= '3.6'
 dataclasses ; python_version == '3.6'
 
-# requirement for the opentelemetry callback plugin
-# WARNING: these libraries depend on grpcio, which takes 7 minutes (!) to build in CI on Python 3.10
-opentelemetry-api ; python_version >= '3.6' and python_version < '3.10'
-opentelemetry-exporter-otlp ; python_version >= '3.6' and python_version < '3.10'
-opentelemetry-sdk ; python_version >= '3.6' and python_version < '3.10'
+# These libraries tend to have conflicting dependencies that break CI quite often.
+# Disable them in stable-3 for now.
+# opentelemetry-api ; python_version >= '3.6' and python_version < '3.10'
+# opentelemetry-exporter-otlp ; python_version >= '3.6' and python_version < '3.10'
+# opentelemetry-sdk ; python_version >= '3.6' and python_version < '3.10'
 
 # requirement for the elastic callback plugin
 elastic-apm ; python_version >= '3.6'
