webfaction modules: deprecation (#6909)
* webfaction modules: deprecation

* add changelog frag

--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -4433,6 +4433,10 @@ plugin_routing:
         warning_text: You are using an internal name to access the community.general.wdc_redfish_info
           modules. This has never been supported or documented, and will stop working
           in community.general 9.0.0.
+    webfaction_app:
+      deprecation:
+        removal_version: 9.0.0
+        warning_text: This module relies on HTTPS APIs that do not exist anymore and there is no clear path to update.
     cloud.webfaction.webfaction_app:
       redirect: community.general.webfaction_app
       deprecation:
@@ -4440,6 +4444,10 @@ plugin_routing:
         warning_text: You are using an internal name to access the community.general.webfaction_app
           modules. This has never been supported or documented, and will stop working
           in community.general 9.0.0.
+    webfaction_db:
+      deprecation:
+        removal_version: 9.0.0
+        warning_text: This module relies on HTTPS APIs that do not exist anymore and there is no clear path to update.
     cloud.webfaction.webfaction_db:
       redirect: community.general.webfaction_db
       deprecation:
@@ -4447,6 +4455,10 @@ plugin_routing:
         warning_text: You are using an internal name to access the community.general.webfaction_db
           modules. This has never been supported or documented, and will stop working
           in community.general 9.0.0.
+    webfaction_domain:
+      deprecation:
+        removal_version: 9.0.0
+        warning_text: This module relies on HTTPS APIs that do not exist anymore and there is no clear path to update.
     cloud.webfaction.webfaction_domain:
       redirect: community.general.webfaction_domain
       deprecation:
@@ -4454,6 +4466,10 @@ plugin_routing:
         warning_text: You are using an internal name to access the community.general.webfaction_domain
           modules. This has never been supported or documented, and will stop working
           in community.general 9.0.0.
+    webfaction_mailbox:
+      deprecation:
+        removal_version: 9.0.0
+        warning_text: This module relies on HTTPS APIs that do not exist anymore and there is no clear path to update.
     cloud.webfaction.webfaction_mailbox:
       redirect: community.general.webfaction_mailbox
       deprecation:
@@ -4461,6 +4477,10 @@ plugin_routing:
         warning_text: You are using an internal name to access the community.general.webfaction_mailbox
           modules. This has never been supported or documented, and will stop working
           in community.general 9.0.0.
+    webfaction_site:
+      deprecation:
+        removal_version: 9.0.0
+        warning_text: This module relies on HTTPS APIs that do not exist anymore and there is no clear path to update.
     cloud.webfaction.webfaction_site:
       redirect: community.general.webfaction_site
       deprecation:
