--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -992,6 +992,7 @@ files:
     keywords: kvm libvirt proxmox qemu
     labels: proxmox virt
     maintainers: $team_virt UnderGreen
+    ignore: tleguern
   $modules/proxmox.py:
     ignore: skvidal
     maintainers: UnderGreen
@@ -1423,5 +1424,5 @@ macros:
   team_scaleway: remyleone abarbare
   team_solaris: bcoca fishman jasperla jpdasma mator scathatheworm troy2914 xen0l
   team_suse: commel evrardjp lrupp toabctl AnderEnder alxgu andytom sealor
-  team_virt: joshainglis karmab tleguern Thulium-Drake Ajpantuso
+  team_virt: joshainglis karmab Thulium-Drake Ajpantuso
   team_wdc: mikemoerk
