Removal of myself as maintainer (#6956)
* Removal of myself as maintainer

* Added the ignore propery to satisfy the tests

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -532,6 +532,7 @@ files:
     keywords: gitlab source_control
     maintainers: $team_gitlab
     notify: jlozadad
+    ignore: dj-wasabi
   $modules/gitlab_branch.py:
     maintainers: paytroff
   $modules/gitlab_merge_request.py:
@@ -1409,7 +1410,7 @@ macros:
   team_cyberark_conjur: jvanderhoof ryanprior
   team_e_spirit: MatrixCrawler getjack
   team_flatpak: JayKayy oolongbrothers
-  team_gitlab: Lunik Shaps dj-wasabi marwatk waheedi zanssa scodeman metanovii sh0shin nejch lgatellier suukit
+  team_gitlab: Lunik Shaps marwatk waheedi zanssa scodeman metanovii sh0shin nejch lgatellier suukit
   team_hpux: bcoca davx8342
   team_huawei: QijunPan TommyLike edisonxiang freesky-edward hwDCN niuzhenguo xuxiaowei0512 yanzhangi zengchen1024 zhongjun2
   team_ipa: Akasurde Nosmoht fxfitz justchris1
