feat: pagerduty_alert: Adds in use of v2 api provided (#7183)
* feat: pagerduty_alert: Adds in use of v2 api provided

* doc: Adds xishen1 to maintainer

* Pagerduty_alert: documentation change

* pagerduty_alert: update documentation

* pagerduty_alert: update periods

* pagerduty_alert: update documentation

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -937,7 +937,7 @@ files:
     labels: pagerduty
     maintainers: suprememoocow thaumos
   $modules/pagerduty_alert.py:
-    maintainers: ApsOps
+    maintainers: ApsOps xshen1
   $modules/pagerduty_change.py:
     maintainers: adamvaughan
   $modules/pagerduty_user.py:
