New Module: gio_mime (#7271)
* gio_mime: new module

* multiple changes

- fixed gio_mime module utils handler detection
- add message to test helper assertion
- add unit test

* gio mime output uses unicode smart quotes

* test helper: do not use skip/xfail reason messages - break in old pytest

* Update plugins/modules/gio_mime.py

Co-authored-by: Felix Fontein <felix@fontein.de>

* change exist variables to meet standards

---------

Co-authored-by: Felix Fontein <felix@fontein.de>

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -278,6 +278,8 @@ files:
   $module_utils/gconftool2.py:
     labels: gconftool2
     maintainers: russoz
+  $module_utils/gio_mime.py:
+    maintainers: russoz
   $module_utils/gitlab.py:
     keywords: gitlab source_control
     labels: gitlab
@@ -517,6 +519,8 @@ files:
   $modules/gem.py:
     labels: gem
     maintainers: $team_ansible_core johanwiren
+  $modules/gio_mime.py:
+    maintainers: russoz
   $modules/git_config.py:
     maintainers: djmattyg007 mgedmin
   $modules/github_:
