galaxy.yml: improve description, improve YAML, remove not really relevant comments (#7554)
Improve description, improve YAML, remove not really relevant comments.

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -9,13 +9,13 @@ version: 8.1.0
 readme: README.md
 authors:
   - Ansible (https://github.com/ansible)
-description: null
+description: >-
+  The community.general collection is a part of the Ansible package and includes many modules and
+  plugins supported by Ansible community which are not part of more specialized community collections.
 license_file: COPYING
-tags: [community]
-# NOTE: No dependencies are expected to be added here
-# dependencies:
+tags:
+  - community
 repository: https://github.com/ansible-collections/community.general
 documentation: https://docs.ansible.com/ansible/latest/collections/community/general/
 homepage: https://github.com/ansible-collections/community.general
 issues: https://github.com/ansible-collections/community.general/issues
-#type: flatmap
