[stable-8] Proxmox add storage content listing (#7725) (#7803)
Proxmox add storage content listing (#7725)

Add module to list content on proxmox storage

We first add a method to list storage content for proxmox, then use that
new methode to add an Ansible module to list content on storage attached
to a proxmox node. User can also use content filtering to define what
they want to list (backup, iso, images,...).

This commit also include the integration and unit test for that new
module.

Co-authored-by: Julian Vanden Broeck <julian.vandenbroeck@dalibo.com>
(cherry picked from commit 4f92f39720c5883fa38e32d6016e2cae70e2b760)

Co-authored-by: Julian <374571+l00ptr@users.noreply.github.com>

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -1051,6 +1051,8 @@ files:
     maintainers: Kogelvis
   $modules/proxmox_node_info.py:
     maintainers: jwbernin
+  $modules/proxmox_storage_contents_info.py:
+    maintainers: l00ptr
   $modules/proxmox_tasks_info:
     maintainers: paginabianca
   $modules/proxmox_template.py:
